# 3-python-package-exercise-snailman

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  pyvenv.cfg  sample.py
.github/workflows/: build.yml
Scripts/: activate  activate.bat
src/: wordutils.py
src/wordutilities/: __init__.py  __main__.py  wordutilities.py
tests/: test_wordutilities.py
words/: words.py
